--- a/src/app/editor/component/form-music-playlist/form-music-playlist.component.scss
+++ b/src/app/editor/component/form-music-playlist/form-music-playlist.component.scss
@@ -274,7 +274,7 @@
 
     .icon-play {
       display: block;
-      bottom: -5px;
+      top: 50px;
       right: -25px;
     }
   }
@@ -364,7 +364,7 @@
     .icon-checked {
       display: block;
       position: absolute;
-      bottom: -5px;
+      top: 50px;
       right: -25px;
       z-index: 10;
     }
@@ -393,7 +393,7 @@
 
     .icon-play {
       display: block;
-      bottom: -5px;
+      top: 50px;
       right: -25px;
     }
   }
