--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,7 @@ button {
 }
 
 .font-card {
+  font-size: 25px;
   font-family: epilogue-210, sans-serif;
   font-weight: 400;
   font-style: normal;
