--- a/src/app/popup/popup/popup.component.scss
+++ b/src/app/popup/popup/popup.component.scss
@@ -26,6 +26,8 @@
 
     & .button-wrapper {
       bottom: 40px;
+      padding: 0 50px;
+      justify-content: space-around;
     }
   }
 }
@@ -58,7 +60,7 @@
     border-top: 1px solid $color-black;
     background-color: transparent;
     padding: 0 20px;
-    height: 55px;
+    height: 60px;
     font-weight: 500;
     font-size: 15px;
     color: $color-black;
@@ -74,6 +76,8 @@
     width: 120px;
     overflow: visible;
     background-color: transparent;
+    display: flex;
+    align-items: center;
     flex-direction: column;
 
     span {
@@ -113,6 +117,7 @@
 
       & .button-wrapper {
         bottom: 40px;
+
         .cancel-button,
         .confirm-button {
           height: 55px;
@@ -137,8 +142,8 @@
       }
 
       div.button-icon {
-        width: 80px;
-        height: 80px;
+        width: 70px;
+        height: 70px;
         border-radius: 100%;
         background-color: $color-black;
         background-position: center center;
