feat: loading interceptor

--- a/src/app/popup/popup/popup.component.scss
+++ b/src/app/popup/popup/popup.component.scss
@@ -139,6 +139,7 @@
         font-weight: 500;
         margin-top: 10px;
         text-align: center;
+        color: $color-black;
       }
 
       div.button-icon {
