--- a/src/styles.scss
+++ b/src/styles.scss
@@ -79,7 +79,7 @@ button {
   height: 60px;
   font-weight: 500;
   font-size: 18px;
-  border-radius: 16px; // @TODO: 보더 줄까 말까..
+  border-radius: 16px;
   display: flex;
   justify-content: center;
   align-items: center;
