feat: 음악 추천 설문지 링크 추가

--- a/src/app/editor/component/editor/editor.component.html
+++ b/src/app/editor/component/editor/editor.component.html
@@ -8,6 +8,11 @@
           bgColor !== 'white'
         "
       >
+        <div
+          class="info-icon"
+          (click)="recommendMusic()"
+          *ngIf="currentStep === step.Music"
+        ></div>
         <h1 class="font-h1-kr">{{ title[currentStep].kr }}</h1>
         <h1 class="font-h1">{{ title[currentStep].en }}</h1>
       </div>
