--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -11,6 +11,9 @@
   <a [routerLink]="['/editor']">
     <div class="button-default button-editor">신년 카드 만들기</div></a
   >
+  <a href="#none" (click)="recommendMusic()">
+    <div class="button-default button-recommend">새해띵곡 추천하기</div></a
+  >
   <p class="instagram-link">
     created by
     <a href="https://www.instagram.com/pot_works/" target="_blank"
