--- a/src/app/shared/component/youtube-player/youtube-player.component.html
+++ b/src/app/shared/component/youtube-player/youtube-player.component.html
@@ -1,6 +1,8 @@
-<youtube-player
-  [height]="200"
-  [width]="200"
-  videoId="{{ videoId }}"
-  [playerVars]="{ autoplay: 1, controls: 0, color: 'white' }"
-></youtube-player>
+<ng-container *ngIf="videoId">
+  <youtube-player
+    [height]="200"
+    [width]="200"
+    videoId="{{ videoId }}"
+    [playerVars]="{ autoplay: 1, controls: 0, color: 'white' }"
+  ></youtube-player>
+</ng-container>
