--- a/src/app/shared/component/bg-canvas/bg-canvas.component.html
+++ b/src/app/shared/component/bg-canvas/bg-canvas.component.html
@@ -15,10 +15,14 @@
       <ng-container *ngSwitchCase="'snow'">
         <div class="snow-element" *ngFor="let snow of snowCount"></div>
       </ng-container>
-      <ng-container
-        *ngSwitchCase="'kirakira'"
-        class="bg-kirakira"
-      ></ng-container>
+      <ng-container *ngSwitchCase="'kirakira'" class="bg-kirakira">
+        <div id="stars-group-1"></div>
+        <div id="stars-group-2"></div>
+        <div id="stars-group-3"></div>
+        <div id="stars-group-4"></div>
+        <div id="stars-group-5"></div>
+        <div id="stars-group-6"></div>
+      </ng-container>
     </ng-container>
   </div>
 </ng-container>
