--- a/src/app/shared/component/bg-canvas/bg-canvas.component.scss
+++ b/src/app/shared/component/bg-canvas/bg-canvas.component.scss
@@ -291,6 +291,102 @@ div.snow-element {
   }
 }
 
+@function generate-random-stars($screen-width, $color, $density) {
+  $h-shadow: random($screen-width);
+  $v-shadow: random($screen-width);
+
+  $stars: "#{$h-shadow}px #{$v-shadow}px #{$color}";
+  @for $i from 2 through $density {
+    $h-shadow: random($screen-width);
+    $v-shadow: random($screen-width);
+
+    $stars: "#{$stars}, #{$h-shadow}px #{$v-shadow}px #{$color}";
+  }
+  @return unquote($stars);
+}
+
+@mixin stars-content($screen-width, $color, $density, $speed, $delay) {
+  width: 2px;
+  height: 2px;
+  border-radius: 50%;
+  opacity: 0;
+  box-shadow: generate-random-stars($screen-width, $color, $density);
+  animation-name: glowing-stars;
+  animation-duration: $speed + s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+  animation-delay: $delay + s;
+}
+
+//Change colors for multi-colors star groups
+#stars-group-1 {
+  @include stars-content(1800, $color-white, 200, 1, 0);
+}
+
+#stars-group-2 {
+  @include stars-content(1800, $color-white, 200, 1, 0.1);
+}
+
+#stars-group-3 {
+  @include stars-content(1800, $color-white, 200, 1, 0.2);
+}
+
+#stars-group-4 {
+  @include stars-content(1800, $color-white, 200, 1, 0.3);
+}
+
+#stars-group-5 {
+  @include stars-content(1800, $color-white, 200, 1, 0.4);
+}
+
+#stars-group-6 {
+  @include stars-content(1800, $color-white, 200, 1, 0.5);
+}
+
+.bg.white > .snow-element {
+  background: $color-primary;
+}
+
+.bg.white,
+.bg.orange {
+  #stars-group-1 {
+    @include stars-content(1800, $color-black, 200, 1, 0);
+  }
+
+  #stars-group-2 {
+    @include stars-content(1800, $color-black, 200, 1, 0.1);
+  }
+
+  #stars-group-3 {
+    @include stars-content(1800, $color-black, 200, 1, 0.2);
+  }
+
+  #stars-group-4 {
+    @include stars-content(1800, $color-black, 200, 1, 0.3);
+  }
+
+  #stars-group-5 {
+    @include stars-content(1800, $color-black, 200, 1, 0.4);
+  }
+
+  #stars-group-6 {
+    @include stars-content(1800, $color-black, 200, 1, 0.5);
+  }
+}
+
+@keyframes glowing-stars {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 @include mobile {
   .bg.checker {
     background-size: 400% 400%;
